[package]
name = "github-client"
description = "Github Client"
version = "0.1.0"
license = "MIT"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"
repository = "https://github.com/rustysoft/github-client"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
reqwest = "0.9.19"
